--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <groupId>com.objectdriven.maven</groupId>
     <artifactId>maven-zookeeper-plugin</artifactId>
     <packaging>maven-plugin</packaging>
@@ -8,11 +15,49 @@
     <name>maven-zookeeper-plugin Maven Mojo</name>
     <url>https://github.com/sfines/maven-zookeeper-plugin</url>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-    </parent>
+    <developers>
+        <developer>
+            <name>Steven Fines</name>
+            <email>sfines@objectdriven.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Yu Yang</name>
+            <email>gdyangyu@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <repository>
+            <id>dayatang-releases</id>
+            <name>Dayatang release repository</name>
+            <url>dav:http://nexus.dayatang.org:8083/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>dayatang-snapshots</id>
+            <name>Dayatang snapshot repository</name>
+            <url>dav:http://nexus.dayatang.org:8083/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>git@github.com:sfines/maven-zookeeper-plugin.git</url>
+        <connection>scm:git:git@github.com:sfines/maven-zookeeper-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:sfines/maven-zookeeper-plugin.git</developerConnection>
+    </scm>
 
 
     <dependencies>
@@ -91,41 +136,6 @@
             </plugin>
         </plugins>
     </reporting>
-
-    <distributionManagement>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <scm>
-        <url>git@github.com:sfines/maven-zookeeper-plugin.git</url>
-        <connection>scm:git:git@github.com:sfines/maven-zookeeper-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:sfines/maven-zookeeper-plugin.git</developerConnection>
-    </scm>
-
-    <developers>
-        <developer>
-            <name>Steven Fines</name>
-            <email>sfines@objectdriven.com</email>
-            <roles>
-                <role>developer</role>
-            </roles>
-        </developer>
-    </developers>
 
     <properties>
         <maven.version>3.2.5</maven.version>
