--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>1.6</version>
                     <configuration>
-
+                        <skip>true</skip>
                     </configuration>
                 </plugin>
             </plugins>
