--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.objectdriven.maven</groupId>
     <artifactId>maven-zookeeper-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>maven-zookeeper-plugin Maven Mojo</name>
     <url>https://github.com/dayatang/maven-zookeeper-plugin</url>
 
