--- a/pom.xml
+++ b/pom.xml
@@ -128,20 +128,20 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>${zookeeper.version}</version>
-	    <exclusions>
-  		<exclusion>
-			<groupId>javax.jms</groupId>
-			<artifactId>jms</artifactId>
-		</exclusion>
-		<exclusion>
-			<groupId>com.sun.jdmk</groupId>
-			<artifactId>jmxtools</artifactId>
-		</exclusion>
-		<exclusion>
-			<groupId>com.sun.jmx</groupId>
-			<artifactId>jmxri</artifactId>
-		</exclusion>
-	    </exclusions>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
@@ -172,16 +172,23 @@
                     </execution>
                 </executions>
             </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>3.2</version>
-		<configuration>
-			<source>1.6</source>
-			<target>1.6</target>
-		</configuration>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-webdav-jackrabbit</artifactId>
+                <version>2.8</version>
+            </extension>
+        </extensions>
     </build>
 
     <reporting>
